# simplingua

./: .dockerignore  .env.docker.example  .env.example  .env.production.example  .gitignore  .ralphrc  Dockerfile  README.md  SETUP.md  blueprint.md  brain-prompt.md  docker-compose.prod.yml  docker-compose.yml  frontend-prompt.md  jest.config.js  jest.polyfills.ts  package-lock.json  package.json  rag-prompt.md  shared-specs.md
.claude/: settings.local.json
.github/workflows/: ci.yml
.ralph/: AGENT.md  PROMPT.md  fix_plan.md  progress.json
.ralph/specs/: api-endpoints.md  architecture.md  data-models.md  frontend.md  tools.md
__tests__/: tools-resource.test.js
__tests__/tools/: lexi.test.js  regla.test.js
backend/: .env.example  Dockerfile  README.md  main.py  requirements.txt
backend/app/: __init__.py  config.py
backend/tests/: conftest.py  test_api_auth.py  (+4 more)
brain/: .env.example  package.json  tsconfig.json
docs/: DEPLOY-VPS.md  DEPLOY-dev.md  DEPLOY.md  DOCUMENTATION-UPDATES.md  PROGRESS.md  blueprint.md  blueprint.md.backup  deploy.md  design.md  dictionary-in-cn.txt  grammar-in-cn.txt  issues2fix.md  lexilibro_de_simplingua.txt  lingua_regla_de_simplingua.txt
frontend/: .env.example  Dockerfile  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
nginx/: nginx-vps.conf  nginx.conf
rag/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: cleanup.js  mock-mongodb.js  seed.ts
src/: middleware.ts
toolkit/: README.md  parse_dictionary.py  parse_grammar.py  requirements.txt  upload.py
(+158 files in other folders)
