[tool.poetry]
name = "simplingua-rag"
version = "0.1.0"
description = "RAG Server for Simplingua Platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.33.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.8.0"
motor = "^3.7.0"
chromadb = "^0.6.0"
python-multipart = "^0.0.18"
aiofiles = "^24.1.0"
python-jwt = "^4.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.14.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true